Added Menu button, button  functionality and JavaScript

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     </div>
 
     <nav class="menu">
-      <div class="menu__branding">
+      <div class="menu-branding">
       </div>
-      <div class="menu__portrait">
+      <div class="menu-portrait">
       </div>
 
-      <ul class="menu__nav">
-        <li class="menu__nav-item">
-          <a href="/" class="menu__nav-link">Home</a>
+      <ul class="menu-nav">
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
         </li>
 
-        <li class="menu__nav-item">
-          <a href="/about.html" class="menu__nav-link">About Me</a>
+        <li class="nav-item">
+          <a href="/about.html" class="nav-link">About Me</a>
         </li>
 
-        <li class="menu__nav-item">
-          <a href="/work.html" class="menu__nav-link">My Work</a>
+        <li class="nav-item">
+          <a href="/work.html" class="nav-link">My Work</a>
         </li>
 
-        <li class="menu__nav-item">
-          <a href="/contact.html" class="menu__nav-link">How To Reach Me</a>
+        <li class="nav-item">
+          <a href="/contact.html" class="nav-link">How To Reach Me</a>
         </li>
       </ul>
     </nav>
@@ -68,7 +68,7 @@
     </div>
   </main>
 
-  <script src="js/main.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 
 </html>
