--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 
     <nav class="menu">
       <div class="menu-branding">
+        <div class="portrait"></div>
       </div>
-      <div class="menu-portrait">
-      </div>
-
       <ul class="menu-nav">
-        <li class="nav-item">
+        <li class="nav-item current">
           <a href="/" class="nav-link">Home</a>
         </li>
 
