--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
 
   <main id="home">
     <h1 class="lg-heading">
-      Kevin <span class="text-secondary">James</span>
+      Kevin <span class="text-secondary">Beckwith</span>
     </h1>
     <h2 class="sm-heading">
       Web Developer, Programmer, Designer & Entrepreneur
     </h2>
     <div class="icons">
-      <a href="#">
-        <i class="fab fa-twitter fa-3x"></i>
-      </a>
+
       <a href="#">
         <i class="fab fa-facebook fa-3x"></i>
       </a>
