Text color function and about page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/8f144fcc3b.js"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="dist/css/main.css">
-  <title>Welcome To My Portfolio</title>
+  <title>About Me</title>
 </head>
 
 <body id="bg-img">
@@ -29,15 +29,15 @@
         </li>
 
         <li class="nav-item">
-          <a href="/about.html" class="nav-link">About Me</a>
+          <a href="about.html" class="nav-link">About Me</a>
         </li>
 
         <li class="nav-item">
-          <a href="/work.html" class="nav-link">My Work</a>
+          <a href="work.html" class="nav-link">My Work</a>
         </li>
 
         <li class="nav-item">
-          <a href="/contact.html" class="nav-link">How To Reach Me</a>
+          <a href="contact.html" class="nav-link">How To Reach Me</a>
         </li>
       </ul>
     </nav>
