Completed work page and responsiveness

--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/8f144fcc3b.js"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="dist/css/main.css">
-  <title>Welcome To My Portfolio</title>
+  <title>About Me</title>
 </head>
 
 <body>
@@ -25,35 +24,35 @@
       </div>
       <ul class="menu-nav">
         <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link">Home</a>
         </li>
 
         <li class="nav-item current">
-          <a href="/about.html" class="nav-link">About Me</a>
+          <a href="about.html" class="nav-link">About Me</a>
         </li>
 
         <li class="nav-item">
-          <a href="/work.html" class="nav-link">My Work</a>
+          <a href="work.html" class="nav-link">My Work</a>
         </li>
 
         <li class="nav-item">
-          <a href="/contact.html" class="nav-link">How To Reach Me</a>
+          <a href="contact.html" class="nav-link">How To Reach Me</a>
         </li>
       </ul>
     </nav>
   </header>
 
-  <main id="About">
+  <main id="about">
     <h1 class="lg-heading">
       About <span class="text-secondary">Me</span>
     </h1>
-    <h2 class="sm-heading">
-      Let me tell you a few things...
+    <h2 class="sm-heading mb-large">
+      Let me tell you a few things . . .
     </h2>
 
     <div class="about-info">
       <img src="dist/img/portrait.jpg" alt="Kevin Beckwith" class="bio-image">
-      <div class="bio">
+      <div class="bio mb-medium">
         <h3 class="text-secondary">BIO</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
           laudantium alias consequuntur nihil temporibus dignissimos aut
@@ -63,7 +62,7 @@
 
       <div class="job job-1">
         <h3>123 Webshop</h3>
-        <h6>On-line student</h6>
+        <h4>On-line student</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi hic
           quisquam architecto, atque dolores obcaecati ad quasi nesciunt ipsa
           porro?</p>
@@ -71,15 +70,15 @@
 
       <div class="job job-2">
         <h3>Designer ABC</h3>
-        <h6>Still a student</h6>
+        <h4>Still a student</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi hic
           quisquam architecto, atque dolores obcaecati ad quasi nesciunt ipsa
           porro?</p>
       </div>
 
       <div class="job job-3">
-        <h3>Designer ABC</h3>
-        <h6>And, still a student</h6>
+        <h3>WebWorks</h3>
+        <h4>And, still a student</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi hic
           quisquam architecto, atque dolores obcaecati ad quasi nesciunt ipsa
           porro?</p>
