--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/8f144fcc3b.js"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="dist/css/main.css">
-  <title>About Me</title>
+  <title>Welcome To My Portfolio</title>
 </head>
 
 <body id="bg-img">
@@ -25,7 +25,7 @@
       </div>
       <ul class="menu-nav">
         <li class="nav-item current">
-          <a href="/" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link">Home</a>
         </li>
 
         <li class="nav-item">
@@ -44,22 +44,21 @@
   </header>
 
   <main id="home">
-    <h1 class="lg-heading">
+    <h1 class="lg-heading ">
       Kevin <span class="text-secondary">Beckwith</span>
     </h1>
-    <h2 class="sm-heading">
+    <h2 class="sm-heading mb-small">
       Web Developer, Programmer, Designer & Entrepreneur
     </h2>
     <div class="icons">
-
       <a href="#">
-        <i class="fab fa-facebook fa-3x"></i>
+        <i class="fab fa-facebook fa-2x"></i>
       </a>
       <a href="#">
-        <i class="fab fa-linkedin fa-3x"></i>
+        <i class="fab fa-linkedin fa-2x"></i>
       </a>
       <a href="#">
-        <i class="fab fa-github fa-3x"></i>
+        <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
   </main>
