Completed the work and contact pages

--- a/work.html
+++ b/work.html
@@ -48,8 +48,8 @@
     <h1 class="lg-heading">
       My <span class="text-secondary">Work</span>
     </h1>
-    <h2 class="sm-heading mb-large">
-      Checkout some of my projects . . .
+    <h2 class="sm-heading mb-medium">
+      Some of my projects . . .
     </h2>
 
     <div class="projects">
