--- a/about.html
+++ b/about.html
@@ -47,12 +47,12 @@
       About <span class="text-secondary">Me</span>
     </h1>
     <h2 class="sm-heading mb-large">
-      Let me tell you a few things . . .
+      A few things to know . . .
     </h2>
 
     <div class="about-info">
       <img src="dist/img/portrait.jpg" alt="Kevin Beckwith" class="bio-image">
-      <div class="bio mb-medium">
+      <div class="bio">
         <h3 class="text-secondary">BIO</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
           laudantium alias consequuntur nihil temporibus dignissimos aut
