--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+  <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/main.css">
@@ -54,36 +56,41 @@
       About
       <span class="text-secondary">Me</span>
     </h1>
-    <h2 class="sm-heading">
+    <h2 class="sm-heading mb-large">
       Let me tell you a few things...
     </h2>
     <div class="about-info">
-      <img src="img/portrait.jpg" alt="John Doe" class="bio-image">
+      <img src="img/portrait.jpg" alt="Kevin Beckwith" class="bio-image">
 
       <div class="bio">
         <h3 class="text-secondary">BIO</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt magni nam nisi quae vitae? Quod molestiae ipsa
-          autem natus eum vel ducimus nulla harum voluptatem eligendi! Unde, reiciendis? Praesentium, laborum.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+          magni nam nisi quae vitae? Quod molestiae ipsa
+          autem natus eum vel ducimus nulla harum voluptatem eligendi! Unde,
+          reiciendis? Praesentium, laborum.</p>
       </div>
 
       <div class="job job-1">
         <h3>123 Webshop</h3>
-        <h6>Full Stack Developer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
+        <h4>On-line student</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          perferendis totam enim. Nesciunt porro dolores
           expedita dolor necessitatibus deserunt nemo.</p>
       </div>
 
       <div class="job job-2">
         <h3>Designers ABC</h3>
-        <h6>Front End Developer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
+        <h4>Still a student</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          perferendis totam enim. Nesciunt porro dolores
           expedita dolor necessitatibus deserunt nemo.</p>
       </div>
 
       <div class="job job-3">
         <h3>Webworks</h3>
-        <h6>Graphic Designer</h6>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis totam enim. Nesciunt porro dolores
+        <h4>And, still a student</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          perferendis totam enim. Nesciunt porro dolores
           expedita dolor necessitatibus deserunt nemo.</p>
       </div>
     </div>
