--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+  <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/main.css">
@@ -51,18 +53,14 @@
 
   <main id="home">
     <h1 class="lg-heading">
-      John
-      <span class="text-secondary">Doe</span>
+      Kevin
+      <span class="text-secondary">Beckwith</span>
     </h1>
-    <h2 class="sm-heading">
+    <h2 class="sm-heading mb-small">
       Web Developer, Programmer, Designer & Entrepreneur
     </h2>
     <div class="icons">
-      <a href="#!">
-        <i class="fab fa-twitter fa-2x"></i>
-      </a>
-      <a href="#!">
-        <i class="fab fa-facebook fa-2x"></i>
+      <i class="fab fa-facebook fa-2x"></i>
       </a>
       <a href="#!">
         <i class="fab fa-linkedin fa-2x"></i>
