--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
-
-  <link rel="stylesheet" href="css/main.css">
+  <script src="https://kit.fontawesome.com/8f144fcc3b.js"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="dist/css/main.css">
   <title>Contact Me</title>
 </head>
 
@@ -28,24 +24,19 @@
       </div>
       <ul class="menu-nav">
         <li class="nav-item">
-          <a href="index.html" class="nav-link">
-            Home
-          </a>
+          <a href="index.html" class="nav-link">Home</a>
         </li>
+
         <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            About Me
-          </a>
+          <a href="about.html" class="nav-link">About Me</a>
         </li>
+
         <li class="nav-item">
-          <a href="work.html" class="nav-link">
-            My Work
-          </a>
+          <a href="work.html" class="nav-link">My Work</a>
         </li>
+
         <li class="nav-item current">
-          <a href="contact.html" class="nav-link">
-            How To Reach Me
-          </a>
+          <a href="contact.html" class="nav-link">How To Reach Me</a>
         </li>
       </ul>
     </nav>
@@ -53,15 +44,15 @@
 
   <main id="contact">
     <h1 class="lg-heading">
-      Contact
-      <span class="text-secondary">Me</span>
+      Contact <span class="text-secondary">Me</span>
     </h1>
     <h2 class="sm-heading mb-large">
-      This is how you can reach me...
+      How you can reach me . . .
     </h2>
+
     <div class="boxes">
       <div>
-        <span class="text-secondary">Email: </span> kbeck1960@gmail.com
+        <span class="text-secondary">Email: </span> johndoe@test.com
       </div>
 
       <div>
@@ -79,10 +70,10 @@
   </main>
 
   <footer id="main-footer">
-    Copyright &copy; 2018
+    Copyright &copy 2021
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 
 </html>
