--- a/contact.html
+++ b/contact.html
@@ -61,14 +61,20 @@
     </h2>
     <div class="boxes">
       <div>
-        <span class="text-secondary">Email: </span> johndoe@test.com
+        <span class="text-secondary">Email: </span> kbeck1960@gmail.com
       </div>
+
       <div>
-        <span class="text-secondary">Phone: </span> (555) 555-5555
+        <span class="text-secondary">Phone: </span> 508-967-5995
       </div>
+
       <div>
-        <span class="text-secondary">Address: </span> 50 Main st Boston MA 02101
+        <span class="text-secondary">Address: </span> 117 South Washington
+        Street
+        - A303,
+        North Attleboro, Ma. 02760
       </div>
+
     </div>
   </main>
 
